--- a/api/static/css/style.css
+++ b/api/static/css/style.css
@@ -311,3 +311,18 @@ body {
 .menu-dropdown:hover .menu-content {
     display: block;
 }
+.notification-badge {
+    background-color: red;
+    color: white;
+    font-size: 12px;
+    font-weight: bold;
+    border-radius: 50%;
+    padding: 5px 10px;
+    position: absolute;
+    top: -10px;
+    right: -15px;
+    display: inline-block;
+}
+
+
+
